Fix horizontal align in post screen

--- a/Sources/Common/CSS/postStyle.css
+++ b/Sources/Common/CSS/postStyle.css
@@ -12,6 +12,9 @@ body {
     line-height: 28px;
 }
 
+.align-center { text-align: center; }
+.align-right { text-align: right; }
+
 p {
     margin: 0px;
     word-wrap: break-word;
